public abstract class CreditCardFactory
{
    public abstract ICreditCard CreateProduct();
}