public interface ICreditCard
{
    string GetCardType();
    double GetCreditLimit();
    double GetAnnualCharge();
}